--- a/drivers/stepper/adi_tmc/tmc52xx/CMakeLists.txt
+++ b/drivers/stepper/adi_tmc/tmc52xx/CMakeLists.txt
@@ -2,3 +2,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
 zephyr_library_sources_ifdef(CONFIG_STEPPER_ADI_TMC52XX tmc52xx.c tmc52xx_spi.c tmc52xx_uart.c)
+#zephyr_library_sources_ifdef(CONFIG_STEPPER_ADI_TMC52XX tmc52xx.c tmc52xx_spi.c tmc52xx_uart.c stepper_api.c)
